# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_locid"
description = "API for managing Unicode Language and Locale Identifiers"
license = "Unicode-3.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
icu_locale_core = { workspace = true }

[features]
std = ["icu_locale_core/std"] 
databake = ["icu_locale_core/databake"] 
serde = ["icu_locale_core/serde"] 
zerovec = ["icu_locale_core/zerovec"] 
bench = ["icu_locale_core/bench"] 
