# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_locid_transform"
description = "API for Unicode Language and Locale Identifiers canonicalization"
version = "1.2.1"
rust-version = "1.61.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locid = { version = "1.2.0", path = "../locid", features = ["zerovec"] }
icu_provider = { version = "1.2.0", path = "../../provider/core", features = ["macros"] }
serde = { version = "1.0", features = ["derive", "alloc"], optional = true, default-features = false }
tinystr = { version = "0.7.1", path = "../../utils/tinystr", default-features = false, features = ["alloc", "zerovec"] }
zerovec = { version = "0.9.4", path = "../../utils/zerovec",  features = ["yoke"] }
databake = { version = "0.1.3", path = "../../utils/databake", optional = true, features = ["derive"] }
displaydoc = { version = "0.2.3", default-features = false }

icu_locid_transform_data = { path = "data", optional = true }

[dev-dependencies]
criterion = "0.4"
icu_testdata = { path = "../../provider/testdata", default-features = false, features = ["icu_locid_transform", "buffer"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icu = { path = "../icu" }
writeable = { path = "../../utils/writeable" }

[lib]
bench = false  # This option is required for Benchmark CI
path = "src/lib.rs"

[features]
default = []
std = []
bench = ["serde"]
serde = ["dep:serde", "icu_locid/serde", "tinystr/serde", "zerovec/serde", "icu_provider/serde"]
datagen = ["serde", "dep:databake", "zerovec/databake", "icu_locid/databake", "tinystr/databake"]
experimental = []
data = ["dep:icu_locid_transform_data"]

[[bench]]
name = "locale_canonicalizer"
harness = false

[[test]]
name = "locale_canonicalizer"
required-features = ["serde"]
