# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_locid_transform"
description = "API for Unicode Language and Locale Identifiers canonicalization"
version = "1.2.1"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locid = { workspace = true, features = ["zerovec"] }
icu_provider = { workspace = true, features = ["macros"] }
serde = { version = "1.0", features = ["derive", "alloc"], optional = true, default-features = false }
tinystr = { workspace = true, features = ["alloc", "zerovec"] }
zerovec = { workspace = true,  features = ["yoke"] }
databake = { workspace = true, optional = true, features = ["derive"] }
displaydoc = { version = "0.2.3", default-features = false }

icu_locid_transform_data = { workspace = true, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icu = { workspace = true }
writeable = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4"

[lib]
bench = false  # This option is required for Benchmark CI

[features]
default = ["compiled_data"]
std = []
bench = ["serde"]
serde = ["dep:serde", "icu_locid/serde", "tinystr/serde", "zerovec/serde", "icu_provider/serde"]
datagen = ["serde", "dep:databake", "zerovec/databake", "icu_locid/databake", "tinystr/databake"]
experimental = []
compiled_data = ["dep:icu_locid_transform_data"]

[[bench]]
name = "locale_canonicalizer"
harness = false

[[test]]
name = "locale_canonicalizer"
required-features = ["serde"]
