# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_locid_transform"
description = "API for Unicode Language and Locale Identifiers canonicalization"
license = "Unicode-3.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locale = { workspace = true }

[features]
default = ["icu_locale/default"]
std = ["icu_locale/std"]
serde = ["icu_locale/serde"]
datagen = ["icu_locale/datagen"]
compiled_data = ["icu_locale/compiled_data"]
