# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_normalizer"
description = "API for normalizing text into Unicode Normalization Forms"
version = "1.0.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
smallvec = "1.6"
displaydoc = { version = "0.2.3", default-features = false }
icu_collections = { version = "1.0.0", path = "../../components/collections" }
icu_provider = { version = "1.0.0", path = "../../provider/core", features = ["macros"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
zerovec = { version = "0.9", path = "../../utils/zerovec" }
icu_properties = { version = "1.0.0", path = "../../components/properties" }
utf8_iter = "1.0.1"
utf16_iter = "1.0.3"
write16 = { version = "1.0", features = ["alloc"] }
databake = { version = "0.1.0", path = "../../utils/databake", optional = true, features = ["derive"] }
zerofrom = { version = "0.1.0", path = "../../utils/zerofrom" }

[dev-dependencies]
icu_testdata = { path = "../../provider/testdata", default-features = false, features = ["icu_normalizer", "icu_properties"] }
atoi = "1.0.0"
arraystring = "0.3.0"
arrayvec = "0.7.2"
write16 = { version = "1.0", features = ["arrayvec"] }

[lib]
path = "src/lib.rs"
bench = false  # This option is required for Benchmark CI

[features]
default = []
std = []
serde = ["dep:serde", "icu_collections/serde", "zerovec/serde", "icu_properties/serde"]
datagen = ["serde", "databake", "icu_collections/databake", "zerovec/databake", "icu_properties/databake"]
experimental = []

[[test]]
name = "tests"
path = "tests/tests.rs"