# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_normalizer"
description = "API for normalizing text into Unicode Normalization Forms"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
categories.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
icu_collections = { workspace = true }
icu_properties = { workspace = true }
icu_provider = { workspace = true, features = ["macros"] }
smallvec = "1.6"
utf16_iter = "1.0.3"
utf8_iter = "1.0.1"
write16 = { version = "1.0", features = ["alloc"] }
zerovec = { workspace = true }

databake = { workspace = true, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

icu_normalizer_data = { workspace = true, optional = true }

[dev-dependencies]
arraystring = "0.3.0"
arrayvec = "0.7.2"
atoi = "1.0.0"
write16 = { version = "1.0", features = ["arrayvec"] }
detone = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4.0"

[features]
default = ["compiled_data"]
std = ["icu_collections/std", "icu_properties/std", "icu_provider/std"]
serde = ["dep:serde", "icu_collections/serde", "zerovec/serde", "icu_properties/serde"]
datagen = ["serde", "dep:databake", "icu_collections/databake", "zerovec/databake", "icu_properties/datagen"]
experimental = []
compiled_data = ["dep:icu_normalizer_data", "icu_properties/compiled_data"]

[[bench]]
name = "bench"
harness = false
